Add custom URL path and query parameters to ProxyClient (#293)
Signed-off-by: Green Screens Ltd. <greenscreens.ltd@gmail.com>